--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "author": "Jaroslav Šmolík <grissius@gmail.com>",
   "contributors": [],
-  "main": "./dist/index.js",
+  "main": "./dist/eslint.js",
   "files": [
     "dist/*"
   ],
@@ -25,15 +25,24 @@
     "prepare": "npm run build",
     "check": "npm-check -i app -i errors -i config -i index & exit 0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "eslint": "^7.0.0-alpha.3",
+    "eslint-config-standard-with-typescript": "^15.0.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-sonarjs": "^0.5.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "prettier": "^2.0.4"
+  },
   "devDependencies": {
     "@types/jest": "^25.1.3",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
     "lint-staged": "^10.0.8",
     "npm-check": "^5.8.0",
-    "prettier": "^2.0.4",
-    "prettier-config-ackee": "^0.0.13",
     "ts-jest": "^25.2.1",
     "tslint-config-ackee": "^0.3.0",
     "typescript": "^3.3.3333"
