--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "check": "npm-check -i app -i errors -i config -i index & exit 0"
   },
   "dependencies": {
-    "@types/spellchecker": "^3.5.0",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
+    "cspell-lib": "^4.1.23",
     "danger": "^10.1.1",
     "eslint": "^7.0.0-alpha.3",
     "eslint-config-standard-with-typescript": "^15.0.1",
@@ -37,8 +37,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-sonarjs": "^0.5.0",
     "eslint-plugin-standard": "^4.0.1",
-    "prettier": "^2.0.4",
-    "spellchecker": "^3.7.0"
+    "prettier": "^2.0.4"
   },
   "devDependencies": {
     "@types/jest": "^25.1.3",
