--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "check": "npm-check -i app -i errors -i config -i index & exit 0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.28.0",
-    "@typescript-eslint/parser": "^2.28.0",
-    "cspell-lib": "^4.1.23",
-    "danger": "^10.1.1",
-    "eslint": "^7.0.0-alpha.3",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
+    "cspell-lib": "^4.2.0",
+    "danger": "^10.4.1",
+    "eslint": "^7.10.0",
     "eslint-config-standard-with-typescript": "^15.0.1",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-sonarjs": "^0.5.0",
@@ -45,12 +45,12 @@
     "prettier": "^2.0.4"
   },
   "devDependencies": {
-    "@types/jest": "^25.1.3",
-    "husky": "^4.2.3",
-    "jest": "^25.1.0",
-    "lint-staged": "^10.0.8",
+    "@types/jest": "^26.0.14",
+    "husky": "^4.3.0",
+    "jest": "^26.4.2",
+    "lint-staged": "^10.4.0",
     "npm-check": "^5.8.0",
-    "ts-jest": "^25.2.1",
-    "typescript": "^3.3.3333"
+    "ts-jest": "^26.4.1",
+    "typescript": "^4.0.3"
   }
 }
