--- a/package.json
+++ b/package.json
@@ -27,30 +27,27 @@
     "test": "jest",
     "test:coverage": "npm run test -- --collectCoverage",
     "lint": "eslint --ignore-path .gitignore '**/*.ts' -f codeframe",
-    "prepare": "npm run build",
-    "check": "npm-check -i app -i errors -i config -i index & exit 0"
+    "prepare": "npm run build && husky install"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "cspell-lib": "^4.2.2",
-    "danger": "^10.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "cspell-lib": "^5.19.3",
+    "danger": "^11.0.2",
     "eslint": "^7.12.0",
-    "eslint-config-standard-with-typescript": "^19.0.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-sonarjs": "^0.5.0",
-    "eslint-plugin-standard": "^4.0.2",
-    "prettier": "^2.1.2"
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-sonarjs": "^0.13.0",
+    "prettier": "^2.6.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "husky": "^4.3.0",
-    "jest": "^26.6.1",
-    "lint-staged": "^10.4.2",
-    "npm-check": "^5.8.0",
-    "ts-jest": "^26.4.2",
-    "typescript": "^4.0.3"
+    "@types/jest": "^27.4.1",
+    "husky": "^7.0.0",
+    "jest": "^27.5.1",
+    "lint-staged": "^12.3.7",
+    "ts-jest": "^27.1.4",
+    "typescript": "^4.6.3"
   }
 }
