--- a/package.json
+++ b/package.json
@@ -30,24 +30,25 @@
     "prepare": "npm run build && husky install"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "cspell-lib": "^5.19.3",
-    "danger": "^11.0.7",
-    "eslint": "^7.12.0",
-    "eslint-config-standard-with-typescript": "^21.0.1",
-    "eslint-plugin-import": "^2.25.4",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "cspell-lib": "^6.14.2",
+    "danger": "^11.2.0",
+    "eslint": "^8.27.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-sonarjs": "^0.13.0",
-    "prettier": "^2.6.1"
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-sonarjs": "^0.16.0",
+    "prettier": "^2.7.1"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
-    "husky": "^7.0.0",
-    "jest": "^27.5.1",
-    "lint-staged": "^12.3.7",
-    "ts-jest": "^27.1.4",
-    "typescript": "^4.6.3"
+    "@types/jest": "^29.2.2",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "lint-staged": "^13.0.3",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   }
 }
