--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prettier.js"
   ],
   "engines": {
-    "node": ">=10.14.0"
+    "node": ">=14.0.0"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,9 @@
     "test": "jest",
     "test:coverage": "npm run test -- --collectCoverage",
     "lint": "eslint --ignore-path .gitignore '**/*.ts' -f codeframe",
+    "lint:fix": "eslint --ignore-path .gitignore '**/*.ts' --fix",
+    "prettier": "prettier --ignore-path .gitignore --check '**/*.{ts,js,json,md}'",
+    "prettier:fix": "npm run prettier -- --write '**/*.{ts,js,json,md}'",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.2.2",
+    "eslint-formatter-codeframe": "^7.32.1",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "lint-staged": "^13.0.3",
