--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-sonarjs": "^0.16.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "eslint-formatter-codeframe": "^7.32.1"
   },
   "devDependencies": {
     "@types/jest": "^29.2.2",
-    "eslint-formatter-codeframe": "^7.32.1",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "lint-staged": "^13.0.3",
