--- a/package.json
+++ b/package.json
@@ -39,15 +39,16 @@
     "danger": "^11.2.0",
     "eslint": "^8.29.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-formatter-codeframe": "^7.32.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-sonarjs": "^0.17.0",
-    "prettier": "^2.8.1",
-    "eslint-formatter-codeframe": "^7.32.1"
+    "prettier": "^2.8.1"
   },
   "devDependencies": {
     "@types/jest": "^29.2.4",
+    "eslint-plugin-security": "^2.1.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
