--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "cspell-lib": "^6.17.0",
-    "danger": "^11.2.0",
+    "danger": "11.2.8",
     "eslint": "^8.29.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-formatter-codeframe": "^7.32.1",
