--- a/package.json
+++ b/package.json
@@ -24,13 +24,10 @@
   "keywords": [],
   "scripts": {
     "build": "tsc",
-    "test": "jest",
-    "test:coverage": "npm run test -- --collectCoverage",
     "lint": "eslint --ignore-path .gitignore '**/*.ts' -f codeframe",
     "lint:fix": "eslint --ignore-path .gitignore '**/*.ts' --fix",
     "prettier": "prettier --ignore-path .gitignore --check '**/*.{ts,js,json,md}'",
-    "prettier:fix": "npm run prettier -- --write '**/*.{ts,js,json,md}'",
-    "prepare": "husky install"
+    "prettier:fix": "npm run prettier -- --write '**/*.{ts,js,json,md}'"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^8.16.0",
@@ -48,11 +45,6 @@
     "prettier": "^3.3.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.4",
-    "husky": "^8.0.2",
-    "jest": "^29.3.1",
-    "lint-staged": "^13.1.0",
-    "ts-jest": "^29.0.3",
     "typescript": "^5.4.2"
   }
 }
