👷 Add matrix to test run

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,12 +6,15 @@ on: [push]
 
 jobs:
   run-eslint-and-prettier:
+    strategy:
+      matrix:
+        version: [ 18, 20, 22 ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: ${{ matrix.version }}
           registry-url: https://registry.npmjs.org/
       - run: npm install
       - run: npm run build
