--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2021",
     "module": "commonjs",
-    "lib": ["es2017"],
+    "lib": ["ES2021"],
     "declaration": true,
     "sourceMap": true,
     "outDir": "./dist",
