--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ackee/styleguide-backend-config",
   "description": "styleguide-backend-config",
-  "version": "0.5.1-alpha.2",
+  "version": "1.0.0",
   "author": "Jaroslav Šmolík <grissius@gmail.com>",
   "contributors": [
     "Pavel Švagr <s.pavel66@gmail.com>"
